kubernetes/cluster/inactive/apps/books/bookorbit/overlays/prod/resources/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bookorbit
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Self-hosted book library manager.
    gethomepage.dev/group: Media
    gethomepage.dev/icon: sh-openbooks.svg
    gethomepage.dev/name: BookOrbit
    gethomepage.dev/pod-selector: "app.kubernetes.io/instance=bookorbit"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: http-gateway-api
      namespace: envoy-gateway-ingress
  hostnames:
    - "bookorbit.${FQDN_01}"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: bookorbit
          namespace: bookorbit
          port: 3000
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
